# hpsdecode

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: code-quality.yml
examples/: inspect_hps.py  view_hps.py
examples/data/: example_a.ply  example_b.ply  example_ce.ply
src/hpsdecode/: __init__.py  __main__.py  binary.py  commands.py  encryption.py  exceptions.py  loader.py  mesh.py  texture.py
src/hpsdecode/export/: __init__.py  base.py  export.py  obj.py  ply.py  stl.py
src/hpsdecode/schemas/: __init__.py  base.py  ca.py  cb.py  cc.py  ce.py
tests/: conftest.py  test_binary.py  test_export.py  test_loader.py  test_mesh.py  test_texture.py
