[project]
name = "hpsdecode"
version = "0.2.0"
description = "A library for decoding HIMSA packed standard (HPS) files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "HeadTriXz" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "pycryptodome>=3.23.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: File Formats",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/HeadTriXz/hpsdecode"
Issues = "https://github.com/HeadTriXz/hpsdecode/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.6",
]

[build-system]
requires = ["uv_build >= 0.9.11, <0.10.0"]
build-backend = "uv_build"
